# bookcheck

./: .env.example  .gitignore  LOI.md  README.md  manuscript-2026-06-27.txt  opencode-deepseek-transcript.txt  pyproject.toml
bookcheck/: __init__.py  api.py  bible.py  cli.py  conflict.py  deepseek_client.py  extract.py  fileparse.py  gemini_client.py  ingest.py  jobs.py  ollama_client.py  prompts.py  providers.py  report.py  resolve.py  store.py  summarize.py  textfmt.py  verify.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  PageState.tsx  UploadPanel.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/lib/: api.ts  format.ts  store.tsx  theme.tsx  toast.tsx
frontend/src/pages/: Characters.tsx  Chat.tsx  Home.tsx  Locations.tsx  Relations.tsx  Report.tsx  Story.tsx  Timeline.tsx
