[project]
name = "bookcheck"
version = "0.2.0"
description = "Local manuscript read-through and plot-consistency analyzer for novelists."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
# The HTTP API / front-end backend. Kept optional so the pure-CLI path stays
# dependency-light (just `requests`).
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "PyMuPDF>=1.23",
    "python-docx>=1.1",
]

[project.scripts]
bookcheck = "bookcheck.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bookcheck"]
